Update stylesheet link from style.css to styles.css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="Expert en chauffage et climatisation à Boumerdès">
     <meta property="og:type" content="business.business">
     <title>Nazim Plombier - Chauffage & Clim à Boumerdès</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
